ChangeLog for herdstat

2005-04-04 Aaron Walker <ka0ttic@gentoo.org>

	* lib/util.cc, lib/util.hh, lib/vars.cc, lib/vars.hh: added vars_T and
	removed get_*_var().

2005-04-03 Aaron Walker <ka0ttic@gentoo.org>

	* lib/portage_misc.cc, lib/portage_misc.hh: Added
	get_version_components().
	* src/util.cc, src/util.hh, lib/util.cc, lib/util.hh, lib/string.cc,
	lib/string.hh, lib/vars.cc, lib/vars.hh, lib/timer.hh,
	lib/util_exceptions.hh, lib/portage_misc.cc, lib/portage_misc.hh,
	lib/portage_config.hh: broke up util.{cc,hh} into it's own convenience
	lib.
	* src/cache.hh: Added new cache_T class, broken out from the caching
	code in metadatas.cc.
	* src/metadatas.cc: Use cache_T.
	* src/util.cc: Modified copy_file to use istream/ostream_iterator's.
	* src/categories.hh: Using cache_T, categories_T is now even more
	trivial, as the categories file is really just a manual cache.

2005-04-02 Aaron Walker <ka0ttic@gentoo.org>

	* src/metadatas.cc: Fixed bug where new timestamp isnt copied when
	md5sum fails.
	* src/action_meta_handler.cc: Don't display colors in the ambigous
	package warning when --quiet.
	* src/action_pkg_handler.cc: Fix bug where first package of list was
	displayed when --count was specified.

2005-04-01 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version (1.0.2 release).
	* src/metadatas.cc: If $PORTDIR/metadata/timestamp exists, dont
	re-cache the metadata.xml list until it changes.
	* src/util.cc, src/util.hh: Modified get_ebuild_var() to handle
	HOMEPAGE specially, doing variable substituion in an attempt to
	produce readable HOMEPAGE output.  Also added a plural version of
	get_var(), get_vars() since it's not practical to open the same file
	many times.  Added md5check().
	* src/action_meta_handler.cc: Instead of throwing an instance of
	args_usage_E if -m is specified w/no non-opt args, print a message
	telling the user they must be in a package directory or category.
	Added a few comments.  Added --quiet support for pythonhead.