@@ -259,93 +259,3 @@ util::fetch(const char *url, const char *file, bool verbose)
 
     return std::system(cmd.c_str());
 }
-
-
-/*
- * Is the specified path a directory?
- */
-bool
-util::is_dir(const char *path)
-{
-    struct stat s;
-    if (stat(path, &s) != 0)
-	return false;
-    return S_ISDIR(s.st_mode);
-}
-
-/*
- * Overloaded is_dir that takes a std::string
- */
-
-bool
-util::is_dir(const std::string &path)
-{
-    return is_dir(path.c_str());
-}
-
-/*
- * Is the specified path a regular file?
- */
-
-bool
-util::is_file(const char *path)
-{
-    struct stat s;
-    if (stat(path, &s) != 0)
-	return false;
-    return S_ISREG(s.st_mode);
-}
-
-/*
- * Overloaded is_file that takes a std::string
- */
-
-bool
-util::is_file(const std::string &path)
-{
-    return is_file(path.c_str());
-}
-
-const char *
-util::basename(const char *path)
-{
-    std::string result(path);
-    std::string::size_type pos;
-
-    /* chop all trailing /'s */
-    while (result[result.length() - 1] == '/' and result.length() > 1)
-	result.erase(result.length() - 1);
-
-    if ((pos = result.rfind('/')) != std::string::npos)
-	result = result.substr(pos + 1);
-
-    return ( result.empty() ? "/" : result.c_str() );
-}
-
-const char *
-util::basename(std::string const &path)
-{
-    return util::basename(path.c_str());
-}
-
-const char *
-util::dirname(const char *path)
-{
-    std::string result(path);
-    std::string::size_type pos;
-
-    /* chop all trailing /'s */
-    while (result[result.length() - 1] == '/' and result.length() > 1)
-	result.erase(result.length() - 1);
-
-    if ((pos = result.rfind('/')) != std::string::npos)
-	result = result.substr(0, pos);
-
-    return ( result.empty() ? "/" : result.c_str() );
-}
-
-const char *
-util::dirname(std::string const &path)
-{
-    return util::dirname(path.c_str());
-}
